Describe git repository in Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 edition = "2021"
 license = "BSL-1.0"
 authors = ["Yuki Takagi <takagiy.4dev@gmail.com>"]
+repository = "https://github.com/takagiy/location-macros"
 keywords = ["macros", "project", "root", "absolute", "path"]
 categories = ["filesystem", "configuration", "development-tools"]
 
